private_server/guard/CELL-1/Q-4/error.txt
  File "/kunden/homepages/8/d657042007/htdocs/CodeSet/private_server/guard/CELL-1/Q-4/1-4.py", line 2
    meow = 12
       ^
IndentationError: expected an indented block
